# discord-python

./: .gitignore  ApplicationCommands.py  Client.py  Enums.py  InteractionResponder.py  Logger.py  README.md  pyproject.toml
discord_python/: .gitignore  ApplicationCommands.py  Client.py  EmbedBuilder.py  Enums.py  InteractionResponder.py  Message.py  OggParser.py  Voice.py  __init__.py
