[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discord_python_SniperThrilla"
version = "0.0.6"
authors = [
  { name="Jayden Young", email="jayden.tyler.young@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.hatch.build]
exclude = [
    "main.py"
]

[project.urls]
"Homepage" = "https://github.com/SniperThrilla/discord-python"
"Bug Tracker" = "https://github.com/SniperThrilla/discord-python/issues"